<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/left_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/constrain"
        app:layout_constraintStart_toStartOf="@id/constrain"
        app:layout_constraintTop_toTopOf="@+id/constrain"
        app:layout_constraintEnd_toStartOf="@id/direita">

        <TextView
            android:id="@+id/nome_repositorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/nome_repositorio"
            android:textColor="@color/teal_700"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/descricao"
            style="@style/Widget.MaterialComponents.TextView"
            android:textSize="12sp"
            android:maxLines="3"/>

        <LinearLayout
            android:id="@+id/linearImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fork_ic"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/content_description_no"
                android:src="@drawable/ic_fork" />

            <TextView
                android:id="@+id/forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/example_fork_stars"
                android:textColor="@color/text_yellow"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/star_ic"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/content_description_no"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/example_fork_stars"
                android:textColor="@color/text_yellow"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/direita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/left_items"
        app:layout_constraintEnd_toEndOf="@+id/constrain"
        app:layout_constraintTop_toTopOf="@+id/constrain">

        <de.hdodenhof.circleimageview.CircleImageView
            tools:src="@drawable/ic_pessoa"
            android:id="@+id/icone"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_no"
             />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            tools:text="@string/nome_sobrenome"
            android:textAlignment="center"
            android:textSize="12sp"
            style="@style/Widget.MaterialComponents.TextView"/>
    </LinearLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>